# mcstatus

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/src/: main.cpp
include/mcstatus/: mcstatus.hpp  packet.hpp
src/: main.cpp  mcstatus.cpp  packet.cpp  packet.hpp
